# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.633 2006/03/31 01:05:43 agaffney Exp $

  30 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  add get_devnode()
  fix up detect_devices() to detect cciss/ida arrays
  src/templates/x86ArchitectureTemplate.py:
  use get_devnode() instead of figuring out the devnode
  skip first 3 steps if partition layout hasn't changed
  src/GLIArchitectureTemplate.py:
  use get_devnode() in local mount and fstab stuff

  26 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  change detect_devices() to handle change in sysfs in 2.6.16 (from lxnay)

  25 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  continue breakup/cleanup of partitioning code

  24 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  set disklabel to default for arch when clearing the partition table
  src/templates/x86ArchitectureTemplate.py:
  complete rewrite of first and second passes

  22 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py, src/templates/x86ArchitectureTemplate.py:
  allow iterating over Device object to get partitions

  21 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  allow access to Device object like a dict

  20 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  allow access to Partition object like a dict

  16 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  fail if any filesystems are mounted on the device being partitioned

  14 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  reorder minor numbers when loading partitions from disk to match the physical
  partition order

  13 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py: