@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.633 2006/03/31 01:05:43 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.634 2006/03/31 04:07:21 agaffney Exp $
 
   30 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
@@ -9,6 +9,7 @@
   src/templates/x86ArchitectureTemplate.py:
   use get_devnode() instead of figuring out the devnode
   skip first 3 steps if partition layout hasn't changed
+  wipe disk and create new disklabel before recreating partitions
   src/GLIArchitectureTemplate.py:
   use get_devnode() in local mount and fstab stuff
 
